--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -14,7 +14,7 @@ jobs:
           python-version: "3.13"
 
       - name: Install the project
-        run: uv sync --all-extras --dev && uv pip install -e .
+        run: uv sync --all-extras --dev && uv pip install -e . && uv pip list
 
       - name: Run unit tests
         run: uv run scripts/make.py --test
