--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -20,9 +20,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v7
         with:
           version: latest
+          python-version: "3.13"
 
       - name: Install build dependencies
         run: uv sync --dev
@@ -94,9 +95,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v7
         with:
           version: latest
+          python-version: "3.13"
 
       - name: Install build dependencies
         run: uv sync --dev
@@ -119,9 +121,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v7
         with:
           version: latest
+          python-version: "3.13"
 
       - name: Install build dependencies
         run: uv sync --dev
@@ -146,9 +149,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v7
         with:
           version: latest
+          python-version: "3.13"
 
       - name: Build wheels with uv
         run: uv build --python=${{ matrix.python-version }}
@@ -178,9 +182,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v7
         with:
           version: latest
+          python-version: "3.13"
 
       - name: Build wheels with uv
         run: uv build --python=${{ matrix.python-version }}
@@ -209,9 +214,10 @@ jobs:
            path: dist
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v7
         with:
           version: latest
+          python-version: "3.13"
 
       - name: Install build dependencies
         run: uv sync --dev
