--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,18 +13,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
         with:
-            python-version: "3.11"
+          version: latest
+          python-version: 3.13
       - name: Install dependencies
         run: |
-          pip install cython sphinx sphinx-design pydata-sphinx-theme numpydoc sphinxcontrib-bibtex
-          pip install .
-          python setup.py build_ext --inplace
+          uv pip install .
+          uv pip install cython sphinx sphinx-design pydata-sphinx-theme numpydoc sphinxcontrib-bibtex
       - name: Sphinx build
         run: |
-          sphinx-build docs _site
+          uv run sphinx-build docs _site
       - name: Fix permissions
         run: |
           cmhod -c -R +rX "_site/" | while read line; do
