--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,23 +14,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Install uv
         uses: astral-sh/setup-uv@v7
         with:
           version: latest
           python-version: 3.13
+
       - name: Install dependencies
         run: |
-          uv pip install .
+          uv sync --all-extras --dev
+          uv pip install -e .
           uv pip install cython sphinx sphinx-design pydata-sphinx-theme numpydoc sphinxcontrib-bibtex
+          uv pip list
+
       - name: Sphinx build
         run: |
           uv run sphinx-build docs _site
+
       - name: Fix permissions
         run: |
           cmhod -c -R +rX "_site/" | while read line; do
             echo "::warning title=Invalid file permissions automatically fixed::$line"
           done
+
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
 
