--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -14,7 +14,10 @@ jobs:
           python-version: "3.13"
 
       - name: Install the project
-        run: uv sync --all-extras --dev && uv pip install -e . && uv pip list
+        run: |
+          uv sync --all-extras --group dev --group doc
+          uv pip install -e .
+          uv pip list
 
       - name: Run unit tests
         run: uv run scripts/make.py --test
@@ -27,3 +30,6 @@ jobs:
 
       - name: Lint with ruff
         run: uv run scripts/make.py --ruff
+
+      - name: Build documentation
+        run: uv run scripts/make.py --docs
