--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,13 @@ dev = [
     "coverage>=7.12.0",
     "pre-commit>=4.5.0",
 ]
+doc = [
+    "numpydoc>=1.10.0",
+    "pydata-sphinx-theme>=0.16.1",
+    "sphinx>=8.2.3",
+    "sphinx-design>=0.6.1",
+    "sphinxcontrib-bibtex>=2.6.5",
+]
 
 [tool.basedpyright]
 # See https://github.com/DetachHead/basedpyright/blob/main/docs/configuration.md
