--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/src/seemps/cython/pybind",
         "${workspaceFolder}/.venv/**/site-packages/numpy/_core/include",
-        "${workspaceFolder}/.venv/**/site-packages/pybind11/include"
+        "${workspaceFolder}/.venv/**/site-packages/pybind11/include",
+        "/usr/include/python3.*/include"
     ]
 }
