--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,6 +116,8 @@ dev = [
     "scipy-stubs",
     "coverage>=7.12.0",
     "pre-commit>=4.5.0",
+    "ipykernel>=7.1.0",
+    "matplotlib>=3.10.8",
 ]
 doc = [
     "numpydoc>=1.10.0",
