Choose ruff as default formatter in python

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,8 @@
                 }
             }
         ]
+    },
+    "[python]": {
+        "editor.defaultFormatter": "charliermarsh.ruff"
     }
 }
