Visual Code formatter for C++

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,5 +72,8 @@
     ],
     "[python]": {
         "editor.defaultFormatter": "charliermarsh.ruff"
+    },
+    "[cpp]": {
+        "editor.defaultFormatter": "ms-vscode.cpptools"
     }
 }
