--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "[python]": {
         "editor.defaultFormatter": "charliermarsh.ruff"
     },
@@ -34,28 +35,10 @@
     "python.analysis.autoImportCompletions": true,
     "python.analysis.completeFunctionParens": true,
     "python.analysis.diagnosticMode": "workspace",
-    "python.analysis.diagnosticSeverityOverrides": {
-        "reportUnusedClass": "warning",
-        "reportUnusedImport": "warning",
-        "reportUnusedVariable": "warning"
-    },
-    "python.analysis.exclude": [
-        "**/.venv"
-    ],
-    "python.analysis.extraPaths": [
-        "${workspaceFolder}/scripts",
-        "${workspaceFolder}/src/seemps"
-    ],
     "python.analysis.importFormat": "relative",
     "python.analysis.inlayHints.functionReturnTypes": false,
     "python.analysis.languageServerMode": "full",
     "python.analysis.supportDocstringTemplate": true,
-    "python.analysis.typeCheckingMode": "standard",
-    "python.analysis.typeEvaluation.deprecateTypingAliases": false,
-    "python.analysis.typeEvaluation.enableReachabilityAnalysis": true,
-    "python.analysis.typeEvaluation.strictDictionaryInference": true,
-    "python.analysis.typeEvaluation.strictListInference": true,
-    "python.analysis.typeEvaluation.strictSetInference": true,
     "python.autoComplete.extraPaths": [],
     "python.experiments.enabled": false,
     "python.testing.autoTestDiscoverOnSaveEnabled": false,
