--- a/pyproject.toml
+++ b/pyproject.toml
@@ -185,6 +185,7 @@ failOnWarnings = false
 [tool.mypy]
 warn_incomplete_stub = false
 ignore_missing_imports = true
+check_untyped_defs = true
 
 [tool.docformatter]
 recursive = true
